<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TriviaQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="xml_parsing_url">http://liisp.uncc.edu/~mshehab/api/trivia.xml</string>
    <string name="welcome_label">Welcome to \n Trivia App</string>
    <string name="start_button_label">Start Trivia</string>
    <string name="exit_button_label">Exit</string>
    <string name="title_activity_trivia">Trivia</string>
    <string name="question_number_label"></string>
    <string name="loading_label">Loading Image...</string>
    <string name="trivia_loading_label">Loading Trivia...</string>
    <string name="ready_label">Trivia Ready</string>
    <string name="button_next_label">Next</string>
    <string name="button_quit_label">Quit</string>
    <string name="title_activity_stats">Stats</string>
    <string name="quit_button_label">Quit</string>
    <string name="again_button_label">Try Again</string>
    <string name="correct_answers_label">Correct Answers</string>
    <string name="trivia_stats_label">Trivia Stats</string>

</resources>
